# wechat-sdk

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
doc/: PLAN.md  WECHAT4_CAPABILITIES.md  WECHAT4_UIA_SELECTORS.md  WECHAT_UIA_PLAYBOOK.md
examples/: current_chat.py  current_chat_auto_reply.py  current_chat_listener.py  diagnose.py  dump_uia_tree.py  listener.py  message_history.py  new_friends.py  probe_accessibility.py  read_messages.py  send_file.py  send_image.py  send_text.py  session_list.py  smoke.py  unread_personal_auto_reply.py  unread_sessions.py
wechat_sdk/: __init__.py  client.py  errors.py  logging.py  params.py
wechat_sdk/config/: __init__.py  capabilities.yaml  clients.yaml  i18n.yaml  pipelines.yaml  selectors.wechat39.yaml  selectors.wechat4.yaml
wechat_sdk/core/: __init__.py  capability.py  clipboard.py  config.py  diagnostics.py  input.py  interaction.py  keyboard.py  mouse.py  pipeline.py  profile.py  selectors.py  uia.py  window.py
wechat_sdk/msgs/: __init__.py  base.py  file.py  image.py  quote.py  text.py  time.py  video.py
wechat_sdk/services/: __init__.py  chat.py  contact.py  dialog.py  file.py  group.py  listener.py  message.py  moment.py
